--- a/css/styles.css
+++ b/css/styles.css
@@ -1,3 +1,7 @@
+.hide {
+  display: none;
+}
+
 body {
   font-family: 'Roboto', sans-serif;
   color: #434455;
@@ -21,9 +25,29 @@ ul {
 }
 
 .container {
-  max-width: 1158px;
-  padding: 0 15px;
-  margin: 0 auto;
+  /* Phone devices */
+  max-width: 320px;
+  padding-left: 16px;
+  padding-right: 16px;
+  margin-left: auto;
+  margin-right: auto;
+  outline: 2px solid red;
+}
+
+@media screen and (min-width: 768px) {
+  .container {
+    /* Tablet device */
+    max-width: 768px;
+  }
+}
+
+@media screen and (min-width: 1158px) {
+  /* Desktop device */
+  .container {
+    max-width: 1158px;
+    padding-left: 15px;
+    padding-right: 15px;
+  }
 }
 
 img {
@@ -55,6 +79,15 @@ img {
   text-transform: uppercase;
   text-decoration: none;
   margin-right: 76px;
+  padding-left: 16px;
+  padding-bottom: 16px;
+  padding-top: 16px;
+}
+
+@media screen and (min-width: 768px) {
+  .header-logo {
+    margin-right: 120px;
+  }
 }
 
 .header-span-logo {
@@ -76,6 +109,19 @@ img {
   display: flex;
   gap: 40px;
 }
+
+@media only screen and (max-width: 767.98px) {
+  .header-nav-list {
+    display: none;
+  }
+}
+
+@media screen and (min-width: 768px) {
+  .header-nav-list {
+    margin-right: 121px;
+  }
+}
+
 .header-nav-item {
   color: var(--NAVY-BLUE, #2e2f42);
   font-family: Roboto;
@@ -130,6 +176,12 @@ img {
   list-style-type: none;
 }
 
+@media only screen and (max-width: 767.98px) {
+  .header-contacts-list {
+    display: none;
+  }
+}
+
 .header-contacts-link {
   color: var(--SLATE, #434455);
   font-family: Roboto;
@@ -147,6 +199,115 @@ img {
   color: #404bbf;
   transition: cubic-bezier(0.4, 0, 0.2, 1);
   transition-duration: 250ms;
+}
+
+/* Mobile menu */
+.menu-btn {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  margin-left: auto;
+}
+
+@media only screen and (min-width: 768px) {
+  .menu-btn {
+    display: none;
+  }
+}
+
+.mobile-menu {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: #fff;
+  padding: 72px 16px 40px;
+  display: flex;
+  flex-direction: column;
+  transform: translateX(-100%);
+  transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1),
+    visibility 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  visibility: hidden;
+}
+
+.mobile-menu.is-open {
+  transform: translateX(0);
+  visibility: visible;
+}
+
+.mobile-menu-btn {
+  position: absolute;
+  top: 24px;
+  right: 24px;
+  border: 1px solid #e7e9fc;
+  border-radius: 50%;
+
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 24px;
+  height: 24px;
+}
+
+.mobile-menu-list {
+  margin-bottom: auto;
+}
+.mobile-menu-item:not(:last-child) {
+  margin-bottom: 40px;
+}
+.mobile-menu-link {
+  color: #2e2f42;
+  font-size: 36px;
+  font-weight: 700;
+  line-height: 40px;
+  letter-spacing: 0.72px;
+  text-transform: capitalize;
+  text-decoration: none;
+}
+
+.mobile-menu-link.current {
+  color: #404bbf;
+}
+.mobile-menu-contacts {
+  margin-bottom: 48px;
+}
+.mobile-menu-contacts-item {
+  margin-bottom: 24px;
+}
+.mobile-menu-contact {
+  color: #434455;
+  font-size: 20px;
+  font-weight: 500;
+  line-height: 24px;
+  letter-spacing: 0.4px;
+  text-decoration: none;
+}
+
+.mobile-menu-contact.accent {
+  color: #4d5ae5;
+}
+.mobile-menu-socials {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 40px;
+}
+.mobile-menu-socials-item {
+  width: 40px;
+  height: 40px;
+}
+.mobile-menu-socials-link {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  border-radius: 50%;
+  background-color: #4d5ae5;
+  width: 40px;
+  height: 40px;
+}
+.mobile-menu-socials-icon {
+  color: #f4f4fd;
 }
 /* #endregion */
 
@@ -629,7 +790,7 @@ img {
   gap: 16px;
   color: #fff;
   text-align: center;
-  font-family: "Roboto", sans-serif;
+  font-family: 'Roboto', sans-serif;
   font-size: 16px;
   font-weight: 500;
   line-height: 24px;
@@ -656,7 +817,8 @@ img {
   top: 0;
   left: 0;
   background-color: rgba(46, 47, 66, 0.4);
-  transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1), visibility 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1),
+    visibility 250ms cubic-bezier(0.4, 0, 0.2, 1);
   width: 100%;
   height: 100%;
   opacity: 0;
@@ -668,22 +830,21 @@ img {
   opacity: 1;
   visibility: visible;
   pointer-events: initial;
-  
 }
 
 .modal {
   position: absolute;
-  top: 50%; 
-  left: 50%; 
+  top: 50%;
+  left: 50%;
   width: 408px;
   min-height: 584px;
   border-radius: 4px;
   background: #fcfcfc;
   box-shadow: 0px 1px 1px 0px rgba(0, 0, 0, 0.14),
-  0px 1px 3px 0px rgba(0, 0, 0, 0.12), 0px 2px 1px 0px rgba(0, 0, 0, 0.2);
+    0px 1px 3px 0px rgba(0, 0, 0, 0.12), 0px 2px 1px 0px rgba(0, 0, 0, 0.2);
   padding-left: 24px;
   transform: translate(-50%, -50%) scale(1);
-  transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1); 
+  transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
   padding: 72px 24px 24px 24px;
 }
 .modal-btn {
@@ -699,15 +860,16 @@ img {
   stroke-width: 1px;
   border-radius: 50%;
   border: 1px solid rgba(0, 0, 0, 0.1);
-  padding: 0; 
+  padding: 0;
   cursor: pointer;
-  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1), border 250ms cubic-bezier(0.4, 0, 0.2, 1); 
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
+    border 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.modal-btn:hover, 
+.modal-btn:hover,
 .modal-btn:focus {
   background-color: #404bbf;
-  border:none;
+  border: none;
   fill: #ffffff;
 }
 .modal-btn-icon {
@@ -731,7 +893,7 @@ img {
   margin-bottom: 16px;
 }
 
-.modal-form .form{
+.modal-form .form {
   margin-bottom: 8px;
 }
 .form-wrapper {
@@ -765,7 +927,7 @@ img {
 .form-input:focus {
   border-radius: 4px;
   border: 1px solid var(--IRIS, #4d5ae5);
-  border-color: #4D5AE5;
+  border-color: #4d5ae5;
 }
 
 .form-icon {
@@ -781,24 +943,24 @@ img {
   fill: #4d5ae5;
 }
 
-.form-message{
+.form-message {
   width: 100%;
   height: 120px;
   border-radius: 4px;
-  border: 1px solid rgba(46, 47, 66, 0.40);
+  border: 1px solid rgba(46, 47, 66, 0.4);
   resize: none;
   font-size: 12px;
   line-height: 1.17;
-  letter-spacing: 0.04em; 
+  letter-spacing: 0.04em;
   color: rgba(46, 47, 66, 0.4);
-  background-color: transparent; 
+  background-color: transparent;
   padding: 8px 16px;
   outline: transparent;
   transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .form-wrapper-comment {
-margin-bottom: 16px;
+  margin-bottom: 16px;
 }
 
 .form-message:focus {
@@ -808,7 +970,7 @@ margin-bottom: 16px;
 
 .checkbox-label {
   font-size: 12px;
-  line-height: 1.17; 
+  line-height: 1.17;
   letter-spacing: 0.04em;
   color: #8e8f99;
 }
@@ -821,23 +983,23 @@ margin-bottom: 16px;
   height: 16px;
   border: 1px solid rgba(46, 47, 66, 0.4);
   border-radius: 2px;
-  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1), border 250ms cubic-bezier(0.4, 0, 0.2, 1), 
-  fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
-  display: inline-flex; 
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
+    border 250ms cubic-bezier(0.4, 0, 0.2, 1),
+    fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  display: inline-flex;
   align-items: center;
   justify-content: center;
-  fill: transparent; 
-
+  fill: transparent;
 }
 
 .checkbox-line:checked + .checkbox-label > .checkbox-span {
   background-color: #404bbf;
   border: none;
-  fill: #F4F4FD; 
+  fill: #f4f4fd;
 }
 
 .checkbox-link {
-  color: #4d5ae5;  
+  color: #4d5ae5;
   text-decoration-line: underline;
 }
 .form-btn {
