--- a/css/styles.css
+++ b/css/styles.css
@@ -84,8 +84,9 @@ img {
   padding-top: 16px;
 }
 
-@media screen and (min-width: 768px) {
+@media only screen and (min-width: 768px) and (max-width: 1158px) {
   .header-logo {
+    padding-left: 0;
     margin-right: 120px;
   }
 }
@@ -110,15 +111,14 @@ img {
   gap: 40px;
 }
 
-@media only screen and (max-width: 767.98px) {
+@media only screen and (min-width: 768px) and (max-width: 1158px) {
   .header-nav-list {
-    display: none;
   }
 }
 
-@media screen and (min-width: 768px) {
+@media only screen and (max-width: 767.98px) {
   .header-nav-list {
-    margin-right: 121px;
+    display: none;
   }
 }
 
@@ -172,8 +172,15 @@ img {
 
 .header-contacts-list {
   display: flex;
-  gap: 40px;
   list-style-type: none;
+}
+
+@media only screen and (min-width: 768px) and (max-width: 1158px) {
+  .header-contacts-list {
+    margin: 16px 16px 16px 122px;
+    flex-wrap: wrap;
+    gap: 12px;
+  }
 }
 
 @media only screen and (max-width: 767.98px) {
@@ -192,6 +199,17 @@ img {
   letter-spacing: 0.32px;
   text-decoration: none;
   transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+@media only screen and (min-width: 768px) and (max-width: 1158px) {
+  .header-contacts-link {
+    color: var(--SLATE, #434455);
+    font-family: Roboto;
+    font-size: 12px;
+    font-weight: 400;
+    line-height: 14px;
+    letter-spacing: 0.48px;
+  }
 }
 
 .header-contacts-link:hover,
@@ -309,6 +327,7 @@ img {
 .mobile-menu-socials-icon {
   color: #f4f4fd;
 }
+
 /* #endregion */
 
 /* hero section */
