--- a/css/styles.css
+++ b/css/styles.css
@@ -712,7 +712,7 @@ img {
 }
 
 @media only screen and (min-width: 768px) and (max-width: 1157.98px) {
-  .footer .footer-container {
+  .container .footer-container {
     padding: 0 108px;
   }
 }
