--- a/css/styles.css
+++ b/css/styles.css
@@ -168,7 +168,7 @@ img {
   list-style-type: none;
 }
 
-@media only screen and (min-width: 768px) and (max-width: 1158px) {
+@media only screen and (min-width: 768px) and (max-width: 1157px) {
   .header-contacts-list {
     flex-direction: column;
     gap: 12px;
@@ -178,6 +178,12 @@ img {
 @media only screen and (max-width: 767.98px) {
   .header-contacts-list {
     display: none;
+  }
+}
+
+@media only screen and (min-width: 1158px) {
+  .header-contacts-list {
+    gap: 40px;
   }
 }
 
@@ -217,6 +223,8 @@ img {
   align-items: center;
   justify-content: center;
   margin-left: auto;
+  border: none;
+  background: transparent;
 }
 
 @media only screen and (min-width: 768px) {
@@ -299,7 +307,6 @@ img {
 }
 .mobile-menu-socials {
   display: flex;
-  justify-content: center;
   align-items: center;
   gap: 40px;
 }
@@ -338,23 +345,72 @@ img {
       rgba(46, 47, 66, 0.7),
       rgba(46, 47, 66, 0.7)
     ),
-    url(../images/hero_bg.jpg);
+    url(../images/mob/hero-mob/hero-mob@1x.jpg);
+}
+
+@media (min-device-pixel-ratio: 2),
+  (min-resolution: 192dpi),
+  (min-resolution: 2dppx) {
+  .hero {
+    background-image: linear-gradient(
+        to bottom,
+        rgba(46, 47, 66, 0.7),
+        rgba(46, 47, 66, 0.7)
+      ),
+      url(../images/mob/hero-mob/hero-mob@2x.jpg);
+  }
 }
 
 @media only screen and (min-width: 768px) {
   .hero {
     padding: 112px 0;
+    background-image: linear-gradient(
+        to bottom,
+        rgba(46, 47, 66, 0.7),
+        rgba(46, 47, 66, 0.7)
+      ),
+      url(../images/tab/hero-tab/hero-tab@1x.jpg);
+  }
+  @media (min-device-pixel-ratio: 2),
+    (min-resolution: 192dpi),
+    (min-resolution: 2dppx) {
+    .hero {
+      background-image: linear-gradient(
+          to bottom,
+          rgba(46, 47, 66, 0.7),
+          rgba(46, 47, 66, 0.7)
+        ),
+        url(../images/tab/hero-tab/hero-tab@2x.jpg);
+    }
   }
 }
 
 @media only screen and (min-width: 1158px) {
   .hero {
     padding: 188px 0;
+    background-image: linear-gradient(
+        to bottom,
+        rgba(46, 47, 66, 0.7),
+        rgba(46, 47, 66, 0.7)
+      ),
+      url(../images/desk/hero-desk/hero-desk@1x.jpg);
+  }
+  @media (min-device-pixel-ratio: 2),
+    (min-resolution: 192dpi),
+    (min-resolution: 2dppx) {
+    .hero {
+      background-image: linear-gradient(
+          to bottom,
+          rgba(46, 47, 66, 0.7),
+          rgba(46, 47, 66, 0.7)
+        ),
+        url(../images/desk/hero-desk/hero-desk@2x.jpg);
+    }
   }
 }
 
 .hero-title {
-  max-width: 288px;
+  max-width: 224px;
   color: var(--WHITE, #fff);
   font-family: Roboto;
   text-align: center;
@@ -364,6 +420,8 @@ img {
   line-height: 40px;
   letter-spacing: 0.72px;
   text-transform: capitalize;
+  margin-right: auto;
+  margin-left: auto;
   margin-bottom: 72px;
 }
 
@@ -428,17 +486,30 @@ img {
   overflow: hidden;
 }
 .feautures {
-  padding: 120px 0;
+  padding: 96px 0;
 }
+
+@media only screen and (min-width: 1158px) {
+  .feautures {
+    padding: 120px 0;
+  }
+}
+
 .feautures-list {
   list-style-type: none;
+}
+
+@media only screen and (max-width: 767px) {
+  .feautures-item:not(:last-child) {
+    margin-bottom: 72px;
+  }
 }
 
 @media only screen and (min-width: 768px) and (max-width: 1157.98px) {
   .feautures-list {
     display: flex;
     flex-wrap: wrap;
-    gap: 24px;
+    gap: 72px 24px;
   }
 
   .feautures-item {
@@ -484,6 +555,12 @@ img {
   align-self: stretch;
 }
 
+@media screen and (min-width: 768px) {
+  .feautures-component {
+    text-align: left;
+  }
+}
+
 .feautures-component-text {
   color: var(--SLATE, #434455);
   font-family: Roboto;
@@ -493,11 +570,10 @@ img {
   line-height: 24px;
   letter-spacing: 0.32px;
   margin-top: 8px;
-  margin-bottom: 72px;
   align-self: stretch;
 }
 
-@media only screen (min-width: 1158px) {
+@media only screen and (min-width: 1158px) {
   .feautures-component {
     font-size: 20px;
     font-weight: 500;
@@ -517,7 +593,19 @@ img {
 /* #region */
 .team {
   background: var(--CLOUD, #f4f4fd);
-  padding: 120px 0;
+  padding: 96px 0;
+}
+
+@media screen and (min-width: 1158px) {
+  .team {
+    padding: 120px 0;
+  }
+}
+
+@media screen and (min-width: 768px) and (max-width: 1157px) {
+  .team-container {
+    max-width: 584px;
+  }
 }
 
 .team-title {
@@ -550,13 +638,29 @@ img {
 }
 
 .team-item {
-  margin-bottom: 72px;
   justify-content: center;
   background: var(--WHITE, #fff);
   border-radius: 0px 0px 4px 4px;
   box-shadow: 0px 2px 1px 0px rgba(46, 47, 66, 0.08),
     0px 1px 1px 0px rgba(46, 47, 66, 0.16),
     0px 1px 6px 0px rgba(46, 47, 66, 0.08);
+}
+
+@media screen and (max-width: 767px) {
+  .team-item:not(:last-child) {
+    margin-bottom: 72px;
+  }
+}
+
+@media screen and (min-width: 1158px) {
+  .team-list {
+    flex-wrap: nowrap;
+    gap: 24px;
+  }
+
+  .team-item {
+    width: calc((100% - 24px * 3) / 4);
+  }
 }
 
 .team-item-image {
@@ -641,8 +745,14 @@ img {
 /* #region */
 .portfolio {
   background: #fff;
-  padding-top: 120px;
-  padding-bottom: 120px;
+  padding-top: 96px;
+  padding-bottom: 96px;
+}
+
+@media screen and (min-width: 1158px) {
+  .portfolio {
+    padding: 120px 0;
+  }
 }
 
 .portfolio-title {
@@ -659,18 +769,49 @@ img {
 }
 
 .portfolio-list {
-  /*display: flex;
-  flex-wrap: wrap;*/
-  gap: 48px 24px;
   list-style-type: none;
+}
+
+@media screen and (min-width: 768px) {
+  .portfolio-list {
+    display: flex;
+    flex-wrap: wrap;
+    gap: 72px 24px;
+  }
+
+  .portfolio-item {
+    width: calc((100% - 24px) / 2);
+  }
+}
+
+@media screen and (min-width: 1158px) {
+  .portfolio-list {
+    gap: 48px 24px;
+  }
+
+  .portfolio-item {
+    width: calc((100% - 24px * 2) / 3);
+  }
 }
 
 .portfolio-item {
   background: var(--WHITE, #fff);
-  width: calc((100% - 48px) / 3);
+  /*width: calc((100% - 48px) / 3);*/
   position: relative;
   overflow: hidden;
   transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+@media screen and (max-width: 767px) {
+  .portfolio-item:not(:last-child) {
+    margin-bottom: 48px;
+  }
+}
+
+@media screen and (max-width: 1157px) {
+  .portfolio-item {
+    box-shadow: 0px 1px 6px 0px rgba(46, 47, 66, 0.08);
+  }
 }
 
 .portfolio-item-image {
@@ -744,7 +885,6 @@ img {
 /* footer */
 /* #region */
 .footer {
-  /*padding: 100px 0;*/
   padding: 96px 0;
   background: var(
     --NAVY-BLUE,
@@ -759,18 +899,17 @@ img {
   }
 }
 .footer-container {
-  /*display: flex; */
   align-items: baseline;
 }
 
-@media only screen and (min-width: 768px) and (max-width: 1157.98px) {
-  .container .footer-container {
-    padding: 0 108px;
+@media only screen and (min-width: 768px) and (max-width: 1157px) {
+  .footer-container {
+    max-width: 584px;
   }
 }
 
 @media only screen and (min-width: 768px) {
-  .container .footer-container {
+  .footer-container {
     display: flex;
     flex-wrap: wrap;
     gap: 72px 24px;
@@ -778,7 +917,7 @@ img {
 }
 
 @media only screen and (min-width: 1158px) {
-  .container .footer-container {
+  .footer-container {
     gap: 0;
   }
 }
@@ -917,6 +1056,13 @@ img {
   justify-content: center;
 }
 
+@media screen and (min-width: 768px) {
+  .subscribe-form {
+    flex-wrap: nowrap;
+    justify-content: flex-start;
+  }
+}
+
 .subscribe-form-field {
   width: 100%;
 }
@@ -942,6 +1088,12 @@ img {
   color: #ffffff;
 }
 
+@media screen and (max-width: 767px) {
+  .subscribe-form-input {
+    width: 288px;
+  }
+}
+
 .subscribe-form-input::placeholder {
   color: #ffffff;
 }
@@ -961,7 +1113,6 @@ img {
   letter-spacing: 0.64px;
   border-radius: 4px;
   background: var(--IRIS, #4d5ae5);
-  margin-left: 24px;
   min-width: 165px;
   min-height: 40px;
   cursor: pointer;
@@ -969,7 +1120,6 @@ img {
 }
 .subscribe-form-icon {
   fill: #fff;
-  margin-left: 16px;
 }
 /* #endregion */
 
@@ -1000,7 +1150,7 @@ img {
   position: absolute;
   top: 50%;
   left: 50%;
-  width: 408px;
+  width: calc(100% - 32px);
   min-height: 584px;
   border-radius: 4px;
   background: #fcfcfc;
@@ -1011,6 +1161,13 @@ img {
   transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
   padding: 72px 24px 24px 24px;
 }
+
+@media screen and (min-width: 768px) {
+  .modal {
+    width: 408px;
+  }
+}
+
 .modal-btn {
   position: absolute;
   top: 24px;
@@ -1133,6 +1290,8 @@ img {
 }
 
 .checkbox-label {
+  display: flex;
+  align-items: center;
   font-size: 12px;
   line-height: 1.17;
   letter-spacing: 0.04em;
@@ -1154,6 +1313,8 @@ img {
   align-items: center;
   justify-content: center;
   fill: transparent;
+  flex-shrink: 0;
+  margin-right: 8px;
 }
 
 .checkbox-line:checked + .checkbox-label > .checkbox-span {
